--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,84 +1,201 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=DR_3G_V1_COLLECTOR
-application.vendor=Admin
-build.classes.dir=${build.dir}/classes
+#Thu Jun 15 18:18:06 GMT+02:00 2017
+file.reference.commons-codec-1.10.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-codec-1.10.jar
+file.reference.jsch-0.1.54.jar=C:\\Programs\\jsch-0.1.54.jar
+javadoc.splitindex=true
 build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
+file.reference.pack.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\pack.jar
+file.reference.log4j-1.2.17.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\log4j-1.2.17.jar
+javadoc.author=false
+file.reference.commons-configuration-1.7.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-configuration-1.7.jar
 build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-# Files in build.classes.dir which should be excluded from distribution jar
-dist.archive.excludes=
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/DR_3G_V1_COLLECTOR.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
-excludes=
-file.reference.mongo-java-driver-3.4.2.jar=C:\\Programs\\mongo_java\\mongo-java-driver-3.4.2.jar
-file.reference.mongodb-driver-3.4.2.jar=C:\\Programs\\mongo_java\\mongodb-driver-3.4.2.jar
-file.reference.mongodb-driver-async-3.4.2.jar=C:\\Programs\\mongo_java\\mongodb-driver-async-3.4.2.jar
-file.reference.mongodb-driver-core-3.4.2.jar=C:\\Programs\\mongo_java\\mongodb-driver-core-3.4.2.jar
+file.reference.commons-io-2.2.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-io-2.2.jar
+file.reference.poi-scratchpad-3.15.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\poi-scratchpad-3.15.jar
+javac.target=1.6
+build.generated.dir=${build.dir}/generated
+file.reference.testng-5.7-jdk15.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\testng-5.7-jdk15.jar
+file.reference.opencsv-2.4.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\opencsv-2.4.jar
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
+file.reference.sshfactory.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\sshfactory.jar
+file.reference.mongodb-driver-async-3.4.2.jar=C\:\\Programs\\mongo_java\\mongodb-driver-async-3.4.2.jar
+file.reference.poi-ooxml-schemas-3.15.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\poi-ooxml-schemas-3.15.jar
+debug.test.classpath=${run.test.classpath}
+file.reference.commons-logging-1.1.1.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-logging-1.1.1.jar
+build.dir=build
+javac.deprecation=false
+file.reference.commons-httpclient-3.1.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-httpclient-3.1.jar
+file.reference.poi-3.15.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\poi-3.15.jar
+file.reference.commons-digester-1.8.1.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-digester-1.8.1.jar
+file.reference.slf4j-log4j12-1.4.3.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\slf4j-log4j12-1.4.3.jar
+file.reference.opencsv-2.3.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\opencsv-2.3.jar
+file.reference.poi-examples-3.15.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\poi-examples-3.15.jar
+file.reference.slf4j-api-1.6.4.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\slf4j-api-1.6.4.jar
+file.reference.commons-net-3.2.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-net-3.2.jar
+test.src.dir=test
+junit.selected.version=4
+file.reference.jersey-client-1.17.1.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jersey-client-1.17.1.jar
+file.reference.jersey-json-1.17.1.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jersey-json-1.17.1.jar
+file.reference.eclipselink.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\eclipselink.jar
 includes=**
+file.reference.jersey-bundle-1.17.1.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jersey-bundle-1.17.1.jar
+application.vendor=Admin
+file.reference.mail.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\mail.jar
+mkdist.disabled=false
 jar.compress=false
+javac.external.vm=true
+annotation.processing.processors.list=
+javadoc.version=false
+file.reference.jettison-1.1.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jettison-1.1.jar
+build.classes.dir=${build.dir}/classes
+file.reference.jconn3d.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jconn3d.jar
+dist.dir=dist
+file.reference.jersey-server-1.17.1.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jersey-server-1.17.1.jar
+manifest.file=manifest.mf
+file.reference.jersey-servlet-1.17.1.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jersey-servlet-1.17.1.jar
+file.reference.curvesapi-1.04.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\curvesapi-1.04.jar
+javac.source=1.6
+file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
+file.reference.joda-time-2.3.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\joda-time-2.3.jar
+run.jvmargs=
+file.reference.asm-3.1.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\asm-3.1.jar
+javac.test.processorpath=${javac.test.classpath}
+file.reference.jsmpp-2.1.0.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jsmpp-2.1.0.jar
+dist.archive.excludes=
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
+build.generated.sources.dir=${build.dir}/generated-sources
+file.reference.ewsjavaapi-1.1.5.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\ewsjavaapi-1.1.5.jar
+javadoc.notree=false
+dist.jar=${dist.dir}/DR_3G_V1_COLLECTOR.jar
+platform.active=default_platform
+annotation.processing.enabled=true
+file.reference.jersey-core-1.17.1.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jersey-core-1.17.1.jar
+main.class=com.vodafone.dr.main.Processor
+file.reference.javamail-ews-bridge-0.0.8-sources.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\javamail-ews-bridge-0.0.8-sources.jar
+dist.javadoc.dir=${dist.dir}/javadoc
+file.reference.commons-net-examples-3.2.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-net-examples-3.2.jar
+file.reference.jsr311-api-1.1.1.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jsr311-api-1.1.1.jar
+file.reference.jackson-jaxrs-1.9.2.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jackson-jaxrs-1.9.2.jar
+file.reference.jcifs-1.3.15.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jcifs-1.3.15.jar
+file.reference.mongo-java-driver-3.4.2.jar=C\:\\Programs\\mongo_java\\mongo-java-driver-3.4.2.jar
+file.reference.poi-excelant-3.15.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\poi-excelant-3.15.jar
+file.reference.jackson-mapper-asl-1.9.2.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jackson-mapper-asl-1.9.2.jar
+javadoc.additionalparam=
+file.reference.log4j-1.2.14.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\log4j-1.2.14.jar
+file.reference.jackson-core-asl-1.9.2.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jackson-core-asl-1.9.2.jar
 javac.classpath=\
     ${file.reference.mongo-java-driver-3.4.2.jar}:\
     ${file.reference.mongodb-driver-3.4.2.jar}:\
     ${file.reference.mongodb-driver-async-3.4.2.jar}:\
-    ${file.reference.mongodb-driver-core-3.4.2.jar}
-# Space-separated list of extra javac options
+    ${file.reference.mongodb-driver-core-3.4.2.jar}:\
+    ${file.reference.asm-3.1.jar}:\
+    ${file.reference.commons-beanutils-1.8.3.jar}:\
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-codec-1.4.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.commons-configuration-1.7.jar}:\
+    ${file.reference.commons-digester-1.8.1.jar}:\
+    ${file.reference.commons-httpclient-3.1.jar}:\
+    ${file.reference.commons-io-2.2.jar}:\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.commons-net-3.2-sources.jar}:\
+    ${file.reference.commons-net-3.2.jar}:\
+    ${file.reference.commons-net-examples-3.2.jar}:\
+    ${file.reference.curvesapi-1.04.jar}:\
+    ${file.reference.eclipselink.jar}:\
+    ${file.reference.ewsjavaapi-1.1.5.jar}:\
+    ${file.reference.jackson-core-asl-1.9.2.jar}:\
+    ${file.reference.jackson-jaxrs-1.9.2.jar}:\
+    ${file.reference.jackson-mapper-asl-1.9.2.jar}:\
+    ${file.reference.jackson-xc-1.9.2.jar}:\
+    ${file.reference.javamail-ews-bridge-0.0.8-sources.jar}:\
+    ${file.reference.javamail-ews-bridge-0.0.8.jar}:\
+    ${file.reference.javax.persistence_2.1.0.v201304241213.jar}:\
+    ${file.reference.jcifs-1.3.15.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jconn3d.jar}:\
+    ${file.reference.jersey-bundle-1.17.1.jar}:\
+    ${file.reference.jersey-client-1.17.1.jar}:\
+    ${file.reference.jersey-core-1.17.1.jar}:\
+    ${file.reference.jersey-json-1.17.1.jar}:\
+    ${file.reference.jersey-server-1.17.1.jar}:\
+    ${file.reference.jersey-servlet-1.17.1.jar}:\
+    ${file.reference.jettison-1.1.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.joda-time-2.3.jar}:\
+    ${file.reference.jsmpp-2.1.0.jar}:\
+    ${file.reference.jsr311-api-1.1.1.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.log4j-1.2.14.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.mail-1.4.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.opencsv-2.3.jar}:\
+    ${file.reference.opencsv-2.4.jar}:\
+    ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}:\
+    ${file.reference.pack.jar}:\
+    ${file.reference.poi-3.15.jar}:\
+    ${file.reference.poi-examples-3.15.jar}:\
+    ${file.reference.poi-excelant-3.15.jar}:\
+    ${file.reference.poi-ooxml-3.15.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.15.jar}:\
+    ${file.reference.poi-scratchpad-3.15.jar}:\
+    ${file.reference.postgresql-9.3-1101.jdbc41.jar}:\
+    ${file.reference.slf4j-api-1.4.3.jar}:\
+    ${file.reference.slf4j-api-1.6.4.jar}:\
+    ${file.reference.slf4j-log4j12-1.4.3.jar}:\
+    ${file.reference.sshfactory.jar}:\
+    ${file.reference.testng-5.7-jdk15.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.jsch-0.1.54.jar}
+javadoc.noindex=false
+file.reference.jfreechart-1.0.19.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jfreechart-1.0.19.jar
+file.reference.jcommon-1.0.23.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jcommon-1.0.23.jar
+annotation.processing.enabled.in.editor=false
+file.reference.xmlbeans-2.6.0.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\xmlbeans-2.6.0.jar
+javadoc.private=false
+javadoc.encoding=${source.encoding}
+file.reference.mongodb-driver-core-3.4.2.jar=C\:\\Programs\\mongo_java\\mongodb-driver-core-3.4.2.jar
+build.test.classes.dir=${build.dir}/test/classes
+file.reference.commons-codec-1.4.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-codec-1.4.jar
 javac.compilerargs=
-javac.deprecation=false
-javac.external.vm=true
+file.reference.commons-collections4-4.1.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-collections4-4.1.jar
+file.reference.jackson-xc-1.9.2.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\jackson-xc-1.9.2.jar
+source.encoding=UTF-8
+file.reference.mongodb-driver-3.4.2.jar=C\:\\Programs\\mongo_java\\mongodb-driver-3.4.2.jar
+file.reference.postgresql-9.3-1101.jdbc41.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\postgresql-9.3-1101.jdbc41.jar
+file.reference.javax.persistence_2.1.0.v201304241213.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\javax.persistence_2.1.0.v201304241213.jar
+meta.inf.dir=${src.dir}/META-INF
+file.reference.commons-lang-2.6.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-lang-2.6.jar
+annotation.processing.run.all.processors=true
+excludes=
+application.title=DR_3G_V1_COLLECTOR
+file.reference.commons-logging-1.2.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-logging-1.2.jar
+file.reference.javamail-ews-bridge-0.0.8.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\javamail-ews-bridge-0.0.8.jar
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+build.test.results.dir=${build.dir}/test/results
+file.reference.slf4j-api-1.4.3.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\slf4j-api-1.4.3.jar
+file.reference.poi-ooxml-3.15.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\poi-ooxml-3.15.jar
+javadoc.use=true
+endorsed.classpath=
+file.reference.mail-1.4.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\mail-1.4.jar
+file.reference.junit-4.12.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\junit-4.12.jar
+file.reference.commons-net-3.2-sources.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-net-3.2-sources.jar
+javadoc.nonavbar=false
+file.reference.commons-collections-3.2.1.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-collections-3.2.1.jar
+javadoc.windowtitle=
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
-javac.test.processorpath=\
-    ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-main.class=com.vodafone.dr.main.Processor
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-source.encoding=UTF-8
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+file.reference.commons-beanutils-1.8.3.jar=C\:\\Projects\\Netbeans\\DR_2G_V4\\lib\\commons-beanutils-1.8.3.jar
 src.dir=src
-test.src.dir=test
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+debug.classpath=${run.classpath}
